--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,6 +13,7 @@
       <table>
         <tr>
           <td colspan="4"><input type="text" name="display" id="display" /></td>
+          <span class="previous-equation"></span>
         </tr>
 
         <tr>
@@ -23,31 +24,31 @@
         </tr>
 
         <tr>
-          <td class="btn btn-clear">7</td>
+          <td class="btn btn-num">7</td>
           <td class="btn btn-num">8</td>
           <td class="btn btn-num">9</td>
-          <td class="btn btn-num">%</td>
+          <td class="btn btn-num">*</td>
         </tr>
 
         <tr>
-          <td class="btn btn-clear">4</td>
+          <td class="btn btn-num">4</td>
           <td class="btn btn-num">5</td>
           <td class="btn btn-num">6</td>
           <td class="btn btn-num">-</td>
         </tr>
 
         <tr>
-          <td class="btn btn-clear">1</td>
+          <td class="btn btn-num">1</td>
           <td class="btn btn-num">2</td>
           <td class="btn btn-num">3</td>
           <td class="btn btn-num">+</td>
         </tr>
 
         <tr>
-          <td class="btn btn-clear">.</td>
+          <td class="btn btn-num">.</td>
           <td class="btn btn-num">0</td>
-          <td class="btn btn-num">&laquo;</td>
-          <td class="btn btn-num">=</td>
+          <td class="btn btn-del">&laquo;</td>
+          <td class="btn btn-equals">=</td>
         </tr>
       </table>
     </main>
