html reference update

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora</title>
-    <link rel="stylesheet" href="assets/style/style.css" />
-    <script src="assets/js/main.js" defer></script>
+    <link
+      rel="stylesheet"
+      href="factory_function_calculator/assets/style/style.css"
+    />
+    <script src="factory_function_calculator/assets/js/main.js" defer></script>
   </head>
   <body>
     <main class="container">
