--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Calculadora</title>
     <link
       rel="stylesheet"
-      href="factory_function_calculator/assets/style/style.css"
+      href="/assets/style/style.css"
     />
-    <script src="factory_function_calculator/assets/js/main.js" defer></script>
+    <script src="/assets/js/main.js" defer></script>
   </head>
   <body>
     <main class="container">
